--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.0",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4"
   }
 }
