--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.11",
+    "@tiptap/extension-text-align": "^3.12.0",
+    "@tiptap/extension-underline": "^3.12.0",
+    "@tiptap/react": "^3.12.0",
+    "@tiptap/starter-kit": "^3.12.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -32,6 +37,7 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query-devtools": "^5.91.1",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
