--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.11",
+    "@tiptap/extension-color": "^3.12.0",
     "@tiptap/extension-text-align": "^3.12.0",
+    "@tiptap/extension-text-style": "^3.12.0",
     "@tiptap/extension-underline": "^3.12.0",
     "@tiptap/react": "^3.12.0",
     "@tiptap/starter-kit": "^3.12.0",
