--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.11",
     "@tiptap/extension-color": "^3.12.0",
+    "@tiptap/extension-highlight": "^3.12.1",
     "@tiptap/extension-text-align": "^3.12.0",
     "@tiptap/extension-text-style": "^3.12.0",
     "@tiptap/extension-underline": "^3.12.0",
