--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.11",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-datepicker": "^8.10.0",
